--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #121212;
+  background-color: #ffe4e4;
   color: #f5f5f5;
   font-family: "Segoe UI", sans-serif;
   display: flex;
@@ -8,7 +8,6 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-
 }
 
 .pulseira {
