--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffe4e4;
+  background-color: #121212;
   color: #f5f5f5;
   font-family: "Segoe UI", sans-serif;
   display: flex;
