--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .pulseira {
   width: 200px;
   height: 50px;
-  background: #333;
+  background: #756e6e;
   border-radius: 25px;
   position: relative;
   box-shadow: 0 0 15px rgba(0, 255, 0, 0.4);
