--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .titulo {
   font-size: 1.8rem;
   margin-bottom: 20px;
-  color: #00ffcc;
+  color: #085848;
   text-shadow: 0 0 10px #00ffcc;
 }
 
