--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .titulo {
   font-size: 1.8rem;
   margin-bottom: 20px;
-  color: #085848;
+  color: #00ffcc;
   text-shadow: 0 0 10px #00ffcc;
 }
 
@@ -48,7 +48,7 @@ body {
 
 .controles {
   margin-top: 30px;
-  text-align: center;
+  text-align: left;
 }
 
 input[type="range"] {
