--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 20px;
   border-radius: 50%;
   background: #00ffcc;
-  box-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+  box-shadow: 0 0 10px #1ebe9e, 0 0 20px #20a58a;
   cursor: pointer;
   transform: translateX(0); /* força o início */
   margin-top: -7px; /* centraliza verticalmente */
